@@ -2,26 +2,26 @@ import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.BitSet;
 import java.util.List;
 
 public class FileUtils {
 
-    public static String readFileToEncode() throws IOException {
-        return Files.readString(Path.of("files/test.txt"));
+    public String readFileToEncode(String sourceFilePath) throws IOException {
+        return Files.readString(Path.of(sourceFilePath));
     }
 
-    public static void writeEncodedToFile(FileHeader fileHeader) throws IOException {
-        OutputStream outputStream = new FileOutputStream("files/test-encoded.txt");
+    public void writeEncodedToFile(BitSet bitSet, FileHeader fileHeader, String destinationFilePath) throws IOException {
+        OutputStream outputStream = new FileOutputStream(destinationFilePath);
         ObjectOutputStream objectOutputStream = new ObjectOutputStream(outputStream);
-        objectOutputStream.writeObject(HuffmanZip.bitSet);
+        objectOutputStream.writeObject(bitSet);
         objectOutputStream.writeObject(fileHeader);
         objectOutputStream.close();
         outputStream.close();
     }
 
-    public static List<Object> readFileToDecode() throws IOException, ClassNotFoundException {
-        FileInputStream fis = new FileInputStream("files/test-encoded.txt");
+    public List<Object> readFileToDecode(String sourceFilePath) throws IOException, ClassNotFoundException {
+        FileInputStream fis = new FileInputStream(sourceFilePath);
         ObjectInputStream ois = new ObjectInputStream(fis);
         Object bitSet = ois.readObject();
         Object fileHeader = ois.readObject();
@@ -33,10 +33,17 @@ public class FileUtils {
         return list;
     }
 
-    public static void writeDecodedToFile() throws IOException {
-        Files.writeString(Path.of("files/test-decoded.txt"), HuffmanZip.decodedString);
-        byte[] file1 = Files.readAllBytes(Path.of("files/test.txt"));
-        byte[] file2 = Files.readAllBytes(Path.of("files/test-decoded.txt"));
-        System.out.println(Arrays.equals(file1, file2));
+    public void writeDecodedToFile(String destinationFilePath, String decodedString) throws IOException {
+        Files.writeString(Path.of(destinationFilePath), decodedString);
+    }
+
+    public void printFileSize(String filePath) throws IOException {
+        long bytes = Files.size(Path.of(filePath));
+        System.out.println("Path: " + filePath);
+        System.out.printf("Size: %,d bytes%n", bytes);
+    }
+
+    public void areTheSameFiles(String filePath1, String filePath2) {
+
     }
 }
